After call with Ben

--- a/app/views/directors/list.html.erb
+++ b/app/views/directors/list.html.erb
@@ -20,7 +20,7 @@
         <div class="col-sm-4"> <img src="<%= director.image_url %>" width="80"> </div>
         <div class="col-sm-2">
             <a href="http://localhost:3000/directors/<%= director.id %>">Read</a>
-            <a href="http://localhost:3000/directors/<%= director.id %>">Edit</a>
+            <a href="http://localhost:3000/directors/edit_form/<%= director.id %>">Edit</a>
             <a href="http://localhost:3000/directors/delete/<%= director.id %>">Delete</a>
         </div>
     </div>
