--- a/app/views/directors/edit_form.html.erb
+++ b/app/views/directors/edit_form.html.erb
@@ -1,28 +1,28 @@
-<form class="form-horizontal" action="http://localhost:3000/directors/create_row">
+<form class="form-horizontal" action="http://localhost:3000/directors/update_form/<%= @i.id %>">
   <div class="form-group">
     <label class="col-sm-2 control-label">Name</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" name="name"> <%= @name %>
+      <input type="text" class="form-control" name="name" value="<%= @i.name %>">
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">Bio</label>
     <div class="col-sm-10">
-      <textarea class="form-control" rows="3" name="bio"> <%= @bio %> </textarea>
+      <textarea class="form-control" rows="3" name="bio"> <%= @i.bio %> </textarea>
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">DOB</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" name="dob">
-      <%= @dob %>
+      <input type="text" class="form-control" name="dob" value="<%= @i.dob %>">
+
     </div>
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label">Image URL</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" name="url">
-      <%= @image %>
+      <input type="text" class="form-control" name="url" value="<%= @i.image_url %>">
+
     </div>
   </div>
   <div class="form-group">
