--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,28 +1,28 @@
 <div class="row">
   <div class="col-sm-offset-1 col-sm-3">
     <div class="thumbnail">
-      <img src="http://41.media.tumblr.com/b78ca5314f53b8754bff183a55a92311/tumblr_mh95s3iewL1rovfcgo1_1280.jpg" alt="...">
+      <img class="thumbnail_image" src="http://41.media.tumblr.com/b78ca5314f53b8754bff183a55a92311/tumblr_mh95s3iewL1rovfcgo1_1280.jpg" alt="...">
       <div class="caption">
         <h3>Directors</h3>
-        <p><a href="#" class="btn btn-primary" role="button">Show</a> <a href="#" class="btn btn-default" role="button">Create</a></p>
+        <p><a href="/directors" class="btn btn-primary" role="button">Show</a> <a href="/directors/new_form" class="btn btn-default" role="button">Create</a></p>
       </div>
     </div>
   </div>
   <div class="col-sm-3">
     <div class="thumbnail">
-      <img src="http://cdn.abclocal.go.com/images/wtvd/cms_exf_2007/automation/images/9395570_1280x720.jpg" alt="...">
+      <img class="thumbnail_image" src="http://cdn.abclocal.go.com/images/wtvd/cms_exf_2007/automation/images/9395570_1280x720.jpg" alt="...">
       <div class="caption">
         <h3>Actors</h3>
-        <p><a href="#" class="btn btn-primary" role="button">Show</a> <a href="#" class="btn btn-default" role="button">Create</a></p>
+        <p><a href="/actors" class="btn btn-primary" role="button">Show</a> <a href="/actors/new_form" class="btn btn-default" role="button">Create</a></p>
       </div>
     </div>
   </div>
   <div class="col-sm-offset-0 col-sm-3">
     <div class="thumbnail">
-      <img src="http://images.offerpop.com/wp-content/uploads/2014/08/Movies.jpg?505c96" alt="...">
+      <img class="thumbnail_image" src="http://images.offerpop.com/wp-content/uploads/2014/08/Movies.jpg?505c96" alt="...">
       <div class="caption">
         <h3>Movies</h3>
-        <p><a href="#" class="btn btn-primary" role="button">Show</a> <a href="#" class="btn btn-default" role="button">Create</a></p>
+        <p><a href="/movies" class="btn btn-primary" role="button">Show</a> <a href="/movies/new_form" class="btn btn-default" role="button">Create</a></p>
       </div>
     </div>
   </div>
